[gd_scene load_steps=29 format=3 uid="uid://c708bnl1qw0ev"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_oxoy7"]
[ext_resource type="Texture2D" uid="uid://b8e2ry862q8je" path="res://assets/art/Pixel Crawler - FREE - 1.8/Heroes/Rogue/Idle/Idle-Sheet.png" id="1_vqlvj"]
[ext_resource type="Texture2D" uid="uid://c4wrheal5my7g" path="res://assets/art/Pixel Crawler - FREE - 1.8/Heroes/Rogue/Run/Run-Sheet.png" id="3_tqbx7"]
[ext_resource type="PackedScene" uid="uid://bfyapsoqkjvfi" path="res://scenes/components/health_component.tscn" id="4_uql5g"]
[ext_resource type="PackedScene" uid="uid://cuiyvse4bomnp" path="res://scenes/components/skill_component.tscn" id="5_ivl23"]
[ext_resource type="Resource" uid="uid://cgccdt3d5xf2b" path="res://assets/resources/Player.tres" id="5_mr43v"]
[ext_resource type="PackedScene" uid="uid://bfnrbpgqdthjf" path="res://scenes/components/mana_component.tscn" id="6_dw37t"]
[ext_resource type="Resource" uid="uid://jglkr4xaymad" path="res://assets/resources/player_skills/basic_attack.tres" id="7_4ojcw"]
[ext_resource type="PackedScene" uid="uid://c34chmri08t0d" path="res://scenes/components/speed_component.tscn" id="7_ppc4w"]
[ext_resource type="Resource" uid="uid://db77x5frx2t04" path="res://assets/resources/player_skills/flash_cards.tres" id="8_cccag"]
[ext_resource type="PackedScene" uid="uid://ccgruou7ckvwh" path="res://scenes/components/status_effect_component.tscn" id="8_n5i0i"]
[ext_resource type="Resource" uid="uid://cjeuiwyhs8bvd" path="res://assets/resources/player_skills/identify.tres" id="9_c7ask"]
[ext_resource type="PackedScene" uid="uid://cuy6ghjgn2sx7" path="res://scenes/components/level_component.tscn" id="9_ms482"]
[ext_resource type="Resource" uid="uid://cjxml4aqwy7a" path="res://assets/resources/player_skills/story_time.tres" id="10_8hyo4"]
[ext_resource type="Resource" uid="uid://rtahi4ddsqae" path="res://assets/resources/player_skills/review.tres" id="11_cn1td"]
[ext_resource type="PackedScene" uid="uid://xdeqhs4o2cno" path="res://scenes/components/damage_indicator.tscn" id="13_1buei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etjyt"]
size = Vector2(19, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mtcx"]
atlas = ExtResource("1_vqlvj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaxu8"]
atlas = ExtResource("1_vqlvj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hhfy"]
atlas = ExtResource("1_vqlvj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1nmm"]
atlas = ExtResource("1_vqlvj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu0yw"]
atlas = ExtResource("3_tqbx7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd0bm"]
atlas = ExtResource("3_tqbx7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxe1u"]
atlas = ExtResource("3_tqbx7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpefm"]
atlas = ExtResource("3_tqbx7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cta0t"]
atlas = ExtResource("3_tqbx7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujky7"]
atlas = ExtResource("3_tqbx7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8tutj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mtcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaxu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hhfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1nmm")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu0yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd0bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxe1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpefm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cta0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujky7")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
up_direction = Vector2(0, 1)
script = ExtResource("1_oxoy7")
CharacterResource = ExtResource("5_mr43v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_etjyt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_8tutj")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.75, 2.75)

[node name="HealthComponent" parent="." instance=ExtResource("4_uql5g")]

[node name="SkillComponent" parent="." node_paths=PackedStringArray("health_component", "status_effect_component") instance=ExtResource("5_ivl23")]
health_component = NodePath("../HealthComponent")
status_effect_component = NodePath("../StatusEffectComponent")
skills = Array[Resource("res://assets/resources/skills.gd")]([ExtResource("7_4ojcw"), ExtResource("8_cccag"), ExtResource("9_c7ask"), ExtResource("10_8hyo4"), ExtResource("11_cn1td")])
user = ExtResource("5_mr43v")

[node name="ManaComponent" parent="." instance=ExtResource("6_dw37t")]

[node name="SpeedComponent" parent="." instance=ExtResource("7_ppc4w")]

[node name="StatusEffectComponent" parent="." instance=ExtResource("8_n5i0i")]

[node name="LevelComponent" parent="." instance=ExtResource("9_ms482")]

[node name="DamageIndicator" parent="." instance=ExtResource("13_1buei")]
visible = false
